--- a/model.ipynb
+++ b/model.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "### Case: The Stolen Szechuan Sauce\n",
     "\n",
+    "## It's always about the context\n",
+    "\n",
     "Since the logs are presented in a chronological order, it is reasonable to assume that an anomaly isn't just a single event, but a sequence of events. This is why we will use a recurrent neural network (RNN) to detect anomalies. The RNN will be an autoencoder, which means that it will learn to reconstruct the input sequence. The reconstruction error will be used to detect anomalies.\n",
     "\n",
     "#### The implimentation is based on tensorflow\n",
